# agent-tape

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
tape/: __init__.py  diff.py  recorder.py  redact.py  replay.py  stats.py  stream.py  view.py
tape/adapters/: __init__.py  anthropic_adapter.py  openai_adapter.py
tests/: test_recorder.py  test_redact.py  test_replay.py
